# smugcli

./: .gitignore  LICENSE  README.md  cspell.json  end_to_end_test.py  io_expectation.py  io_expectation_test.py  persistent_dict.py  persistent_dict_test.py  requirements.txt  requirements_test.txt  run_tests.py  setup.cfg  setup.py  smugcli.py  smugcli_test.py  smugmug.py  smugmug_fs.py  smugmug_fs_test.py  smugmug_oauth.py  smugmug_shell.py  smugmug_test.py  spelling_dictionary.txt  task_manager.py  task_manager_test.py  terminal_size.py  test_all.sh  test_utils.py  thread_pool.py  thread_pool_test.py  thread_safe_print.py  thread_safe_print_test.py  tox.ini
.github/workflows/: flake8.yml  pylint.yml  release.yml  spelling.yml  tests.yml
smugcli/: __init__.py  __main__.py  persistent_dict.py  smugcli.py  smugcli_commands.py  smugmug.py  smugmug_fs.py  smugmug_oauth.py  smugmug_shell.py  stdout_interceptor.py  task_manager.py  terminal_size.py  thread_pool.py  thread_safe_print.py  version.py
testdata/: album.json  album_images.json  folder_children.json  folder_children_page2.json  root_children.json  root_node.json  smugmug_node.json  smugmug_node_children.json  smugmug_node_children_mkdir.json  user.json
tests/: end_to_end_test.py  integration_test_base.py  io_expectation.py  io_expectation_test.py  persistent_dict_test.py  smugmug_fs_test.py  smugmug_test.py  task_manager_test.py  test_utils.py  thread_pool_test.py  thread_safe_print_test.py
tests/testdata/: SmugCLI_1.heic  SmugCLI_2.heic  album_images.json  album_images_page2.json  authuser.json  user.json  (+4 more)
