[bumpversion]
current_version = 1.0.5
commit = True
tag = True

[bumpversion:file:smugcli/version.py]

[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 1

[pycodestyle]
indent_size = 2
max_line_length = 80

[flake8]
indent-size = 2
max-line-length = 80

[pylint.format]
indent-string = '  '
max-line-length = 80

[pylint.design]
max-args=
max-attributes=
max-bool-expr=
max-branches=
max-locals=
max-public-methods=
max-returns=
max-statements=

[pylint.master]
init-hook = 'import sys; sys.path.append(".")'