[bumpversion]
current_version = 1.0.6
commit = True
tag = True

[bumpversion:file:smugcli/version.py]

[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 1

[pycodestyle]
indent_size = 2
max_line_length = 80

[flake8]
indent-size = 2
max-line-length = 80

[pylint.format]
indent-string = '  '
max-line-length = 80

[pylint.design]
max-args = 100
max-attributes = 100
max-bool-expr = 100
max-branches = 100
max-locals = 100
max-public-methods = 100
max-returns = 100
max-statements = 100

[pylint.master]
init-hook = 'import sys; sys.path.append(".")'
